gccida/g3/simplify_if_then_else
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5109:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5111:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5114:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5114:5: error: use of undeclared identifier 'v12'
rtx v12; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5119:4: error: expected ';' after expression
rtx compound_operation; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5119:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rax 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:367:12: note: 'make_compound_operation' declared here
static rtx make_compound_operation  PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5120:4: error: expected ';' after expression
rtx v18; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5120:5: error: use of undeclared identifier 'v18'
rtx v18; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5133:4: error: expected ';' after expression
rtx v31; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5133:5: error: use of undeclared identifier 'v31'
rtx v31; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5139:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v37; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5140:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5156:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v54; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5161:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5161:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5162:4: error: expected ';' after expression
rtx v60; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5162:5: error: use of undeclared identifier 'v60'
rtx v60; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5166:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v64; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/combine.c:5167:6: error: use of undeclared identifier 'v65'
rtx *v65; // rdi 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_if_then_else/src/obj/combine.o] Error 1
